[package]
name = "shuttlings-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.134"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
actix-files = "0.6.6"
actix-multipart = "0.7.2"
png = "0.17.16"
ulid = { version = "1.1.3", features = ["serde", "uuid"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
chrono = "0.4.39"
