[package]
name = "shuttlings-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.44.2"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.140"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
actix-files = "0.6.6"
actix-multipart = "0.7.2"
png = "0.17.16"
ulid = { version = "1.2.1", features = ["serde", "uuid"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "fast-rng"] }
chrono = "0.4.40"
shuttle-shared-db = { version = "0.53.0", features = ["sqlx", "postgres"] }
sqlx = "0.8.3"
htmlize = "1.0.5"
unic = "0.9.0"
sha256 = "1.6.0"
futures-util = "0.3.31"
actix-ws = "0.3.0"
s2 = "0.0.13"
tar = "0.4.44"
